--- a/GardeManger.WebApi/GardeManger.WebApi.csproj
+++ b/GardeManger.WebApi/GardeManger.WebApi.csproj
@@ -13,7 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\GardeManger.Infrastructure.Data\GardeManger.Infrastructure.Data.csproj" />
+    <ProjectReference Include="..\GardeManger.Application.DTOs\GardeManger.Application.DTOs.csproj" />
+    <ProjectReference Include="..\GardeManger.Application.Services\GardeManger.Application.Services.csproj" />
   </ItemGroup>
 
 </Project>
