--- a/GardeManger.WebApi/appsettings.json
+++ b/GardeManger.WebApi/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DataAccessPostgreSqlProvider": "Host=localhost;Port=5432;Database=GMDB;Username=GM_DBA;Password=K33pUrF00dS@fe"
+  },
   "AllowedHosts": "*"
 }
